# exemple-rust

./: .env  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20231226131746_init.sql  20231226131747_init.sql  20231226132839_user.sql  20231226132840_user.down.sql  20231226132840_user.sql  20231227173742_user_role.down.sql  20231227173742_user_role.sql
src/: lib.rs  main.rs
src/bootstrap/: mod.rs
src/controllers/: mod.rs  recipes.rs  user.rs
src/controllers/middleware/: auth.rs
src/database/postgres/: mod.rs
src/error/: mod.rs
src/models/: auth.rs  common.rs  date.rs  mod.rs  user.rs
src/repositories/: mod.rs  user.rs
src/router/: mod.rs
src/usecases/: user.rs  users.rs
src/utils/: hash.rs  jwt.rs
