[package]
name = "banana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.0", features = ["cors"] }
async-trait = "0.1.75"
axum = { version = "0.7.2", features = ["macros"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = [
  "runtime-tokio-rustls",
  "any",
  "postgres",
  "uuid",
  "time",
  "tls-native-tls",
] }

rand = "0.8.5"
argon2 = "0.5.2"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

dotenv = "0.15.0"
anyhow = "1.0.76"
thiserror = "1.0.52"
