[package]
name = "banana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.75"
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.0", features = ["cors"] }
axum = { version = "0.7.2", features = ["macros"] }

serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
validator = { version = "0.16.1", features = ["derive"] }

sqlx = { version = "0.7.3", features = [
  "any",
  "uuid",
  "chrono",
  "postgres",
  "tls-native-tls",
  "runtime-tokio-rustls",
] }

anyhow = "1.0.76"
thiserror = "1.0.52"

chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6.1", features = [
  "serde",
  "v4",
  "fast-rng",
  "macro-diagnostics",
] }

rand = "0.8.5"
argon2 = "0.5.2"
jsonwebtoken = "9.2.0"

dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
